# OptionScope

./: .gitignore  README.md  config.yml  optionscope.py  pyproject.toml  validate_components.py
app/: __init__.py  app.py
app/core/: __init__.py  data_providers.py  indicators.py  risk.py  scoring.py
app/core/providers/: public_provider.py
app/core/strategies/: __init__.py  base.py  cash_secured_put.py  covered_call.py  vertical_spread.py
app/core/strategies/tests/: test_basic.py
app/ui/: __init__.py  components.py
app/utils/: __init__.py  caching.py  config.py
tests/: __init__.py  test_app_flow.py  test_data_provider_factory.py  test_data_providers.py  test_indicators.py  test_integration.py  test_risk.py
